# pyMut

./: .gitignore  404.html  MANIFEST.in  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_clean_tests.sh  setup.py
api/Analysis Methods/actionable_mutation_annotation/: index.html
api/Analysis Methods/known_cancer_annotation/: index.html
api/Analysis Methods/pfam_annotation/: index.html
api/Analysis Methods/pfam_domains/: index.html
api/Analysis Methods/tmb_analysis/: index.html
api/Core/pymutation_class/: index.html
api/Data Combination/combine_data/: index.html
api/Data Export/to_maf/: index.html
api/Data Export/to_vcf/: index.html
api/Data Loading/read_maf/: index.html
api/Data Loading/read_vcf/: index.html
api/Filters/chrom_sample_filter/: index.html
api/Filters/genomic_range/: index.html
api/Filters/pass_filter/: index.html
api/Filters/tissue_expression_filter/: index.html
api/Visualization/summary_plot/: index.html
docs/: index.md  installation.md  mutational-signature.md  oncoplot.md  summary-plot-guia-completa.md  summary-plot.md
docs/api/: pymutation_class.md  tmb_analysis.md
docs/api/Analysis Methods/: actionable_mutation_annotation.md  cosmic_annotation.md  known_cancer_annotation.md  pfam_annotation.md  pfam_domains.md  tmb_analysis.md  vep_annotation.md
docs/api/Core/: pymutation_class.md
docs/api/Data Combination/: combine_data.md
docs/api/Data Export/: to_maf.md  to_vcf.md
docs/api/Data Loading/: read_maf.md  read_vcf.md
docs/api/Filters/: chrom_sample_filter.md  genomic_range.md  (+2 more)
docs/examples/: basic_usage.py  maf_to_variant_classification.ipynb  merge_annotation.ipynb  summary_example.py  test_cosmic_annotation.ipynb  test_knowncancer_simple.ipynb  trinucleotide_matrix_demo.ipynb  vcf_subset_extraction.ipynb  vcf_to_PyMutation.ipynb
docs/user-guide/: basic-usage.md  installation.md
examples/: api_example.py  ejemplo_firmas_mutacionales.ipynb  example_complete_summary.ipynb  example_filtering.ipynb  example_mutational_signature.py  example_oncoplot.py  example_summary.ipynb  example_summary.py  example_summary_new.py  merge_annotation.ipynb  mutation_burden_demo.ipynb  pfam_annotation_demo.ipynb  simple_example.py  snv_class_example.py  snv_class_individual_example.py  variant_class_individual_example.py  variant_type_example.py  variant_type_individual_example.py  vcf_subset_extraction.ipynb  vcf_to_PyMutation.ipynb
examples/results_tmb/: TMB_analysis.tsv  TMB_statistics.tsv
installation/: index.html
oncoplot/: index.html
search/: search_index.json
src/pyMut/: __init__.py  combination.py  core.py  input.py  io.py  mutation_burden.py  output.py  pfam_annotation.py  version.py
summary-plot-guia-completa/: index.html
test/: test_tissue_expression.py  test_vep_annotate.py
tests/: test_core.py  test_mutational_signature.py  test_oncoplot.py  test_tissue_expression.py  test_vep_annotate.py
(+102 files in other folders)
