[tool.poetry]
name = "pyMut"
version = "0.1.0"
description = "A Python library for genetic mutations"
authors = ["Luis Ruiz Moreno <lruizm4@alumnos.nebrija.es>",
  "Jesús Cuesta Bartolomé <jcuestab1@alumnos.nebrija.es>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=2.0,<2.3"
pandas = "^2.3.1"
seaborn = "^0.13.2"
mkdocs = "^1.6.1"
matplotlib = "^3.10.3"
requests = "^2.32.4"
urllib3 = "^2.5.0"
duckdb = "^1.3.2"
pyfaidx = "^0.8.1.4"
scipy = "<1.16"
scikit-learn = "^1.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
pytest = "^8.4.1"
jupyterlab = "^4.4.5"
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
