[project]
name = "pymut"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis Ruiz Moreno - Estudiante de Ingeniería Informática - Universidad Nebrija",email = "lruizm4@alumnos.nebrija.es"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy (==1.26.*)",
    "pandas (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "pyfaidx (>=0.8.1.4,<0.9.0.0)",
    "scipy (==1.11.*)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pyensembl (>=2.3.13,<3.0.0)",
    "pyarrow (>=14.0.2,<14.1.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"
pytest = "^8.4.1"
jupyterlab = "^4.4.5"
ipykernel = "^6.30.0"

